--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
       <div class="contact-page-map">
         <div>
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6711.408680505609!2d74.8606253448777!3d32.74704062403416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6543673150b69e67%3A0x4e6a9fbfd7a48498!2shimalayan%20tripo!5e0!3m2!1sen!2sin!4v1704476415224!5m2!1sen!2sin"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1650.7429678705234!2d74.88894784825384!3d34.15949169734268!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38e187b006bdabe3%3A0xaee49688c17c7482!2sHotel%20Zarafshan!5e0!3m2!1sen!2sin!4v1731136343234!5m2!1sen!2sin"
             width="100%"
             height="500px"
             style="border: 0"
