--- a/service.html
+++ b/service.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Services :: Turab Tour and Travel</title>
+    <title>Services Turab Tour and Travel</title>
     <!--== Favicon ==-->
     <link
       rel="shortcut icon"
@@ -41,12 +41,12 @@
   </head>
   <body class="preloader-active">
     <!--== Start Preloader Content ==-->
-    <div class="preloader-wrap">
+<!--     <div class="preloader-wrap">
       <div class="preloader">
         <span class="dot"></span>
         <div class="dots"><span></span> <span></span> <span></span></div>
       </div>
-    </div>
+    </div> -->
     <!--== End Preloader Content ==-->
 
     <!-- Whatsapp Plugin starts -->
