--- a/service.html
+++ b/service.html
@@ -382,7 +382,7 @@
     <!--== End Footer Area Wrapper ==-->
 
     <!-- Scroll Top Button -->
-    <button class="btn-scroll-top"><i class="fa fa-angle-up"></i></button
+    <button class="btn-scroll-top"><i class="fa fa-angle-up"></i></button>
 
 
     <script src="assets/js/app.min.js"></script>
