--- a/contact.html
+++ b/contact.html
@@ -141,8 +141,8 @@
                   <div class="col-md-6">
                     <h5>VISIT OUR AGENCY AT</h5>
                     <h4 class="mb-0">
-                      4th floor Ahanger complex Karanagar,<br />
-                      Srinagar, Jammu and Kashmir 190010
+                      Chandpora, Harwan<br />
+                      Srinagar, Jammu and Kashmir 191123
                     </h4>
                   </div>
                   <div class="col-md-6 mt-sm-25">
